--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ markdown-it-py==3.0.0
 mdurl==0.1.2
 more-itertools==10.5.0
 nh3==0.2.18
+numpy==1.26.4
 pkginfo==1.10.0
 Pygments==2.18.0
 readme_renderer==44.0
