--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 backports.tarfile==1.2.0
+boto3==1.35.7
 certifi==2024.8.30
 charset-normalizer==3.3.2
 docutils==0.21.2
 idna==3.8
 importlib_metadata==8.4.0
+fastapi==0.112.0
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.0.2
