--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ rich==13.8.1
 twine==5.1.1
 urllib3==2.2.2
 zipp==3.20.1
-mediapipe==0.9.1.0
+mediapipe
 opencv-contrib-python==4.10.0.84
 opencv-python==4.7.0.68
 setuptools==70.1.1
